tests/NormalTests/paczka1/fuzzy1/56435422.err
Error in line 9: u9RYYzB S$$0 125,1
Error in line 6: u9RYYzB S330 37,0
Error in line 11: u9RYYzB A28 95,4
Error in line 18: xtvjLEJ S330 134,1
Error in line 19: dDKpCJjfP A452 70,0
Error in line 29: g5glIfmMnBD A28 66,3
Error in line 33: g5glIfmMnBD S340 39,6
Error in line 36: 0lK9G S340 46,3
